prevent email button from submitting contact form

--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
 				<input type="text" id="contactTitle" name="entry.2114561524" />
 				<label for="contactMessage">Enter your message here:</label>
 				<textArea id="contactMessage" name="entry.778323340"></textArea>
-				<button onclick="submitEmail()" class="b0">
+				<button type="button" onclick="submitEmail()" class="b0">
 					<svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="listImg lI0" > <circle stroke="#db6363" cx="12" cy="12" r="4"></circle> <path stroke="#db6363" d="M16 8v5a3 3 0 0 0 6 0v-1a10 10 0 1 0-3.92 7.94"></path> </svg>
 					<span class="listTxt lT0">Email</span>
 				</button>
