removed autocomplete from input radio

--- a/index.html
+++ b/index.html
@@ -180,28 +180,28 @@
 			<p class="printLinks">My portfolio: <a rel="noopener" target="_blank" href="https://phoerest.github.io">https://phoerest.github.io</a></p>
 			<ul id="projectsList">
 				<li>
-					<input type="radio" name="project" id="qrRadio" onchange="openProject(0)" autocomplete="off" checked />
+					<input type="radio" name="project" id="qrRadio" onchange="openProject(0)" checked />
 					<label class="itemContainer" for="qrRadio">
 						<svg viewBox="0 0 24 24" fill="none" stroke="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="miter" class="listImg lI1" > <path d="M 2,8 L 2,2 L 8,2 M 16,2 L 22,2 L 22,8 M 8,22 L 2,22 L 2,16 M 22,16 L 22,22 L 16,22 " stroke="#68c0e8" ></path> <rect x="6" y="6" width="12" height="12" rx="2" ry="2" stroke="#7ad7ff" ></rect> <rect x="9" y="9" width="6" height="6" rx="2" ry="2" fill="#68c0e8"></rect> </svg>
 						<span class="listTxt lT1">QR code generator</span>
 					</label>
 				</li>
 				<li>
-					<input type="radio" name="project" id="morseRadio" onchange="openProject(1)" autocomplete="off" />
+					<input type="radio" name="project" id="morseRadio" onchange="openProject(1)" />
 					<label class="itemContainer" for="morseRadio">
 						<svg viewBox="0 0 24 24" fill="none" stroke="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="listImg lI1" > <rect x="3" y="4" width="18" height="16" rx="3" ry="3" stroke="#db6363" ></rect> <path d="M 6,8 ZM 9,8 ZM 12,8 L 16,8 ZM 6,12 ZM 9,12 L 13,12 ZM 16,12 ZM 6,16 L 9,16 ZM 12,16 L 16,16 Z" stroke="#ff7373" ></path> </svg>
 						<span class="listTxt lT1">Morse code generator</span>
 					</label>
 				</li>
 				<li>
-					<input type="radio" name="project" id="sunRadio" onchange="openProject(2)" autocomplete="off" />
+					<input type="radio" name="project" id="sunRadio" onchange="openProject(2)" />
 					<label class="itemContainer" for="sunRadio">
 						<svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#fff83b" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="listImg lI1" > <circle stroke="#ffb73b" cx="12" cy="12" r="5"></circle> <line x1="12" y1="1" x2="12" y2="3"></line> <line x1="12" y1="21" x2="12" y2="23"></line> <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line> <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line> <line x1="1" y1="12" x2="3" y2="12"></line> <line x1="21" y1="12" x2="23" y2="12"></line> <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line> <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line> </svg>
 						<span class="listTxt lT1">City Sun & Moon calculator</span>
 					</label>
 				</li>
 				<li>
-					<input type="radio" name="project" id="imageRadio" onchange="openProject(3)" autocomplete="off" />
+					<input type="radio" name="project" id="imageRadio" onchange="openProject(3)" />
 					<label class="itemContainer" for="imageRadio">
 						<svg viewBox="0 0 24 24" fill="none" stroke="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="listImg lI1" > <rect x="2" y="2" width="20" height="20" rx="2" ry="2" stroke="#59cf84" ></rect> <ellipse cx="16" cy="9" rx="2" ry="2" stroke="#ffb73b" ></ellipse> <path d="M 5,19 L 8,10 L 14,16 L 17,15 L 19,19 Z" stroke="#d19c60" ></path> </svg>
 						<span class="listTxt lT1">Image filter</span>
@@ -209,14 +209,14 @@
 					<span class="listSeperator lS1"></span>
 				</li>
 				<li>
-					<input type="radio" name="project" id="colorRadio" onchange="openProject(4)" autocomplete="off" />
+					<input type="radio" name="project" id="colorRadio" onchange="openProject(4)" />
 					<label class="itemContainer" for="colorRadio">
 						<svg viewBox="0 0 24 24" fill="none" stroke="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="listImg lI1" > <path d="M 22,9 Q 23,5 19,3 A 5 5 5 1 0 8,22 Q 12,24 16,20 Q 18,18 14,15 A 2 2 5 1 1 17,11 Q 21,14 22,9 Z" stroke="#d19c60" ></path> <ellipse cx="7" cy="12" rx="2" ry="2" stroke="#59cf84" ></ellipse> <ellipse cx="17" cy="7" rx="1" ry="1" stroke="#68c0e8" ></ellipse> <ellipse cx="11" cy="7" rx="2" ry="2" stroke="#ffb73b" ></ellipse> <ellipse cx="10" cy="18" rx="2" ry="2" stroke="#db6363" ></ellipse> </svg>
 						<span class="listTxt lT1">Color picker</span>
 					</label>
 				</li>
 				<li>
-					<input type="radio" name="project" id="fileRadio" onchange="openProject(5)" autocomplete="off" />
+					<input type="radio" name="project" id="fileRadio" onchange="openProject(5)" />
 					<label class="itemContainer" for="fileRadio">
 						<svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#7ad7ff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="listImg lI1" > <path stroke="#68c0e8" d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path> <polyline stroke="#68c0e8" points="14 2 14 8 20 8"></polyline> <line x1="16" y1="13" x2="8" y2="13"></line> <line x1="16" y1="17" x2="8" y2="17"></line> <polyline points="10 9 9 9 8 9"></polyline> </svg>
 						<span class="listTxt lT1">File manager</span>
@@ -224,28 +224,28 @@
 					<span class="listSeperator lS1"></span>
 				</li>
 				<li>
-					<input type="radio" name="project" id="timerRadio" onchange="openProject(6)" autocomplete="off" />
+					<input type="radio" name="project" id="timerRadio" onchange="openProject(6)" />
 					<label class="itemContainer" for="timerRadio">
 						<svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="listImg lI1" > <circle stroke="#d19c60" cx="12" cy="12" r="10"></circle> <polyline stroke="#59cf84" points="12 6 12 12 16 14"></polyline> </svg>
 						<span class="listTxt lT1">Stopwatch</span>
 					</label>
 				</li>
 				<li>
-					<input type="radio" name="project" id="unitRadio" onchange="openProject(7)" autocomplete="off" />
+					<input type="radio" name="project" id="unitRadio" onchange="openProject(7)" />
 					<label class="itemContainer" for="unitRadio">
 						<svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#db6363" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="listImg lI1" > <path d="M14 14.76V3.5a2.5 2.5 0 0 0-5 0v11.26a4.5 4.5 0 1 0 5 0z"></path> </svg>
 						<span class="listTxt lT1">Measurement converter</span>
 					</label>
 				</li>
 				<li>
-					<input type="radio" name="project" id="searchRadio" onchange="openProject(8)" autocomplete="off" />
+					<input type="radio" name="project" id="searchRadio" onchange="openProject(8)" />
 					<label class="itemContainer" for="searchRadio">
 						<svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="listImg lI1" > <circle stroke="#68c0e8" cx="11" cy="11" r="8"></circle> <line stroke="#7ad7ff" x1="21" y1="21" x2="16.65" y2="16.65"></line> </svg>
 						<span class="listTxt lT1">Search & Replace text</span>
 					</label>
 				</li>
 				<li>
-					<input type="radio" name="project" id="shapeRadio" onchange="openProject(9)" autocomplete="off" />
+					<input type="radio" name="project" id="shapeRadio" onchange="openProject(9)" />
 					<label class="itemContainer" for="shapeRadio">
 						<svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#59cf84" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="listImg lI1" > <path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z" ></path> </svg>
 						<span class="listTxt lT1">Polygon generator</span>
