added aria-label in nav for accessibility on mobile devices

--- a/index.html
+++ b/index.html
@@ -49,35 +49,35 @@
 			<nav>
 				<ul style="width: 100%;">
 					<li>
-						<a href="#about" class="itemContainer">
+						<a href="#about" class="itemContainer" aria-label="Resume">
 							<svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="none" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="listImg lI0 lI2" > <path stroke="#ffb73b" d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path> <circle stroke="#ffb73b" cx="12" cy="7" r="4"></circle> </svg>
 							<span class="listTxt lT0 lT2">Resume</span>
 						</a>
 						<span class="listSeperator lS0"></span>
 					</li>
 					<li>
-						<a href="#skills" class="itemContainer">
+						<a href="#skills" class="itemContainer" aria-label="Skills">
 							<svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="none" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="listImg lI0 lI2" > <polyline stroke="#68e897" points="16 18 22 12 16 6"></polyline> <polyline stroke="#59cf84" points="8 6 2 12 8 18"></polyline> </svg>
 							<span class="listTxt lT0 lT2">Skills</span>
 						</a>
 						<span class="listSeperator lS0"></span>
 					</li>
 					<li>
-						<a href="#projects" class="itemContainer">
+						<a href="#projects" class="itemContainer" aria-label="Projects">
 							<svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="listImg lI0 lI2" > <polyline stroke="#68c0e8" points="7.5 4.21 12 6.81 16.5 4.21"></polyline> <polyline stroke="#ffa970" points="7.5 19.79 7.5 14.6 3 12"></polyline> <polyline stroke="#59cf84" points="21 12 16.5 14.6 16.5 19.79"></polyline> <polyline stroke="#ffb73b" points="3.27 6.96 12 12.01 20.73 6.96"></polyline> <line stroke="#ffb73b" x1="12" y1="22.08" x2="12" y2="12"></line> <path stroke="#db6363" d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z" ></path> </svg>
 							<span class="listTxt lT0 lT2">Projects</span>
 						</a>
 						<span class="listSeperator lS0"></span>
 					</li>
 					<li>
-						<a href="#contact" class="itemContainer">
+						<a href="#contact" class="itemContainer" aria-label="Contact">
 							<svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="none" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="listImg lI0 lI2" > <polyline stroke="#ff7373" points="22,6 12,13 2,6"></polyline> <path stroke="#db6363" d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z" ></path> </svg>
 							<span class="listTxt lT0 lT2">Contact</span>
 						</a>
 						<span class="listSeperator lS0"></span>
 					</li>
 					<li>
-						<button class="itemContainer" onclick="share()">
+						<button class="itemContainer" onclick="share()" aria-label="Share">
 							<svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="none" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="listImg lI0 lI2" > <path stroke="#68c0e8" d="M4 12v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-8"></path> <polyline stroke="#7ad7ff" points="16 6 12 2 8 6"></polyline> <line stroke="#7ad7ff" x1="12" y1="2" x2="12" y2="15"></line> </svg>
 							<span class="listTxt lT0 lT2">Share</span>
 						</button>
